# Gomoku

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  gomoku_pybind.cpp  main.py  pyproject.toml
src/algo/: _algo.py  algo.cpp  algo.hpp  algo.py  get_move.py
src/game/: gomoku.cpp  gomoku.hpp  gomoku.py
src/ui/: render.py
tests/: test_gomoku.py
tests/test_game/: test_gomoku.py
